<resources>
    <string name="app_name">EECS4443Lab</string>
    <!-- Welcome message text -->
    <string name="welcome_msg">Welcome, %s!</string>
    <string name="android_icon_at_the_bottom_of_the_screen">Android icon at the bottom of the screen</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log In</string>
    <string name="icon_showcasing_the_android_logo">Icon showcasing the android logo</string>
</resources>